# v8-heap-analyzer

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  output.json  output.txt  test-check.json  test-string-output.txt
src/: lib.rs  main.rs  types.rs  utils.rs
src/analysis/: all_paths.rs  dominator_tree.rs  duplicates.rs  hidden_classes.rs  lengauer_tarjan.rs  lengauer_tarjan_support.rs  mod.rs  retained_size.rs
src/graph/: builder.rs  compact.rs  gexf.rs  gml.rs  lengauer_tarjan.rs  lengauer_tarjan_traits.rs  mod.rs  petgraph_traits.rs  petgraph_wrapper.rs  v8_heap_graph.rs
src/parser/: metadata.rs  mod.rs  string_table.rs
src/paths/: finder.rs  mod.rs
src/report/: explorer.rs  generator.rs  mod.rs
src/snapshot/: mod.rs
tests/: GC_ROOT_TEST_RESULTS.md  generate-multiple-paths.js  generate-no-gc-root.js  generate-object-duplicates.js  generate-snapshot.js  generate-string-duplicates.js  generate-unicode-duplicates.js  integration_test.rs  snapper.js
tests/fixtures/: object.heapsnapshot  test-duplicates.heapsnapshot  test-multiple-paths.heapsnapshot  test-no-gc-root.heapsnapshot  test-string-duplicates.heapsnapshot  test-unicode-duplicates.heapsnapshot
tests/scripts/: object.js
