[package]
name = "v8-heap-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

