[package]
name = "v8-heap-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
petgraph = "0.6"
anyhow = "1.0"
thiserror = "1.0"
struson = { version = "0.7.2", features = ["simple-api", "serde"] }
fixedbitset = "0.5.7"
itertools = "0.14.0"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
debug = true
lto = true
